--- a/src/Backend/MyCookBook.Application/MyCookBook.Application.csproj
+++ b/src/Backend/MyCookBook.Application/MyCookBook.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Shared\MyCookBook.Communication\MyCookBook.Communication.csproj" />
     <ProjectReference Include="..\..\Shared\MyCookBook.Exceptions\MyCookBook.Exceptions.csproj" />
     <ProjectReference Include="..\MyCookBook.Domain\MyCookBook.Domain.csproj" />
