--- a/src/Backend/MyCookBook.Infrastructure/MyCookBook.Infrastructure.csproj
+++ b/src/Backend/MyCookBook.Infrastructure/MyCookBook.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.11" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyCookBook.Domain\MyCookBook.Domain.csproj" />
   </ItemGroup>
 
