feat: adding dependencies injection settings to the API project

--- a/src/Backend/MyCookBook.API/appsettings.Development.json
+++ b/src/Backend/MyCookBook.API/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ConnectionStrings": {
+    "connection": "Server=(LocalDB)\\MSSQLLocalDB;Database=MyRecipeBook;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Settings": {
+    "Password": {
+      "AdditionalKey": "wwwwwwww"
     }
   }
 }
