feat: creating schema or database when api runs

--- a/src/Backend/MyCookBook.API/appsettings.Development.json
+++ b/src/Backend/MyCookBook.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "connection": "Server=(LocalDB)\\MSSQLLocalDB;Database=MyRecipeBook;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "connection": "Server=(LocalDB)\\MSSQLLocalDB;Database=MyCookBook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Settings": {
     "Password": {
